# em_homework_3

./: .env_sample  .flake8  .gitignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
breeds/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
breeds/migrations/: 0001_initial.py
castom_commands/management/commands/: csu.py
config/: asgi.py  settings.py  urls.py
dogs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dogs/migrations/: 0001_initial.py
